--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "redis": "^4.2.0",
+    "sequelize": "^6.21.2",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1"
   },
